--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.1",
@@ -21,7 +21,9 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.5.0",
     "next": "15.2.1",
+    "next-themes": "^0.4.6",
     "prisma": "^6.4.1",
     "qrcode.react": "^4.2.0",
     "react": "19.0.0",
@@ -30,6 +32,7 @@
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.11",
     "react-qrcode-logo": "^3.0.0",
+    "react-typed": "^2.0.12",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
