--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
     "next": "15.2.1",
